apps/labrinth/k8s/overlays/local/envfrom-patch.yaml
# vscode-kubernetes-tools: exclude
apiVersion: apps/v1
kind: Deployment
metadata:
  name: labrinth
spec:
  template:
    spec:
      containers:
        - name: labrinth
