apps/labrinth/k8s/overlays/local/resources-patch.yaml
# vscode-kubernetes-tools: exclude
apiVersion: apps/v1
kind: Deployment
metadata:
  name: labrinth
spec:
  template:
    spec:
      containers:
        - name: labrinth
          resources:
            requests:
              cpu: "0.25"
              memory: 64Mi
            limits:
              cpu: "1"
              memory: 256Mi
